# MindVault

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  STYLEGUIDE.md  download_model.sh  download_qwen.sh  download_whisper.sh  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  AndroidManifest.xml.bak
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
app/src/main/java/com/mindvault/ai/: App.kt  JournalAI.kt  LlamaBridge.kt  MainActivity.kt  WhisperBridge.kt
app/src/main/java/com/mindvault/ai/audio/: AudioRecorder.kt
app/src/main/java/com/mindvault/ai/crypto/: CryptoHelper.kt  KeyStoreManager.kt
app/src/main/java/com/mindvault/ai/data/dao/: EntryDao.kt
app/src/main/java/com/mindvault/ai/data/db/: AppDatabase.kt  JournalEntry.kt
app/src/main/java/com/mindvault/ai/ml/: ModelInstaller.kt  SettingsStore.kt  SyncClient.kt  TokenStore.kt
app/src/main/java/com/mindvault/ai/ui/: EntryListActivity.kt  SettingsActivity.kt
app/src/main/java/com/mindvault/ai/ui/home/: HomeRoute.kt  (+3 more)
app/src/main/java/com/mindvault/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_list.xml
app/src/main/res/layout/: activity_entry_list.xml  activity_main.xml  activity_settings.xml  toolbar.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors_brand.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
mindvault-mcp/: cline_mcp_settings.json
(+23 files in other folders)
